# modelops-template

./: .gitignore  Dockerfile  LICENSE  MLProject  MLproject  README.md  cookiecutter.json  environment.yaml  pyproject.toml  requirements.txt  worker.py  workflow_conf.yaml  workflow_runner.py
core/: logger.py  mlflow_helper.py  pandas_helper.py  worker.py
notebooks/: Adalib - test.ipynb  Debug.ipynb  Demo MLOps.ipynb  Untitled.ipynb  Workflow.ipynb
notebooks/tests/: Bolig market - test.ipynb  MLFLow - test.ipynb
scripts/: build_custom_image.sh  create_new_env.sh  docker_kernel.json  startup.sh
steps/: etl.py  model.py  model_helper.py  train.py
{{cookiecutter.project_name}}/: Dockerfile  MLproject  README.md  environment.yaml  workflow_conf.yaml  workflow_runner.py
{{cookiecutter.project_name}}/core/: pandas_helper.py  util.py  worker.py
{{cookiecutter.project_name}}/notebooks/: Workflow.ipynb
{{cookiecutter.project_name}}/notebooks/tests/: Adalib - test.ipynb  Debug.ipynb  Test Spark.ipynb  Testing.ipynb
{{cookiecutter.project_name}}/scripts/: build_custom_image.sh  cleanup.sh  docker_kernel.json  setup_custom_kernel.sh
{{cookiecutter.project_name}}/steps/user/: scraper.py
