[tool.poetry]
name = "model_base"
version = "0.1.0"
description = "Base image for a simple ML setup with MLFlow"
authors = ["Subu"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
